@@ -25,6 +25,12 @@ extern "C"
 {
 #endif
 
+#define STARPU_MALLOC_PINNED	((1ULL)<<1)
+#define STARPU_MALLOC_COUNT	((1ULL)<<3)
+
+int starpu_malloc_set_flags(int flags);
+int starpu_malloc_get_flags();
+
 void starpu_malloc_set_align(size_t align);
 int starpu_malloc(void **A, size_t dim);
 int starpu_free(void *A);
